--- a/ToDo
+++ b/ToDo
@@ -3,3 +3,6 @@ Would be nice
 Dark Mode/Colour Scheme Dropdown
 Accessibility options and Testing
 Sort function for notes
+
+Logout bug
+note text not updating
